# new-code-challenges

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
divination-game/: index.html
docs/: divination-game.md  divination-game.md~  index.md
search/: search_index.json
