[tool.poetry]
name = "game-code-challenges"
version = "0.1.0"
description = "Desafios de jogos usando games"
authors = ["jonatasoli <contact@jonatasoliveira.dev>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
